# text_extraction

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
schemas/: discharge_renal.json  nephrology_renal.json
scripts/: run_all_structured_two_gpus.sh  run_discharge_embeddings.sh  run_discharge_structured.sh  run_nephrology_embeddings.sh  run_nephrology_structured.sh  serve_medgemma.sh
src/text_extraction/: __init__.py  embeddings.py  io.py  structured.py
tests/: test_core.py  test_vllm_integration.py
