[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "medical-text-extraction"
version = "0.1.0"
description = "Schema-guided medical text extraction with vLLM and dense text embeddings with Hugging Face encoders."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "jsonschema>=4.21",
  "numpy>=1.26",
  "openai>=1.30",
]

[project.optional-dependencies]
embeddings = ["torch>=2.2", "transformers>=4.45"]
dev = ["pytest>=8"]

[project.scripts]
extract-structured = "text_extraction.structured:main"
extract-embeddings = "text_extraction.embeddings:main"

[tool.hatch.build.targets.wheel]
packages = ["src/text_extraction"]

[tool.pytest.ini_options]
testpaths = ["tests"]

