[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "medical-text-extraction"
version = "0.1.0"
description = "Schema-guided medical text extraction with vLLM and dense text embeddings with Hugging Face encoders."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "jsonschema>=4.21,<5",
  "numpy>=1.26,<3",
  "openai>=1.30,<3",
]

[project.optional-dependencies]
server = ["vllm>=0.19,<0.20"]
embeddings = ["torch>=2.2", "transformers>=4.50,<5"]
dev = ["pytest>=8,<9"]

[project.scripts]
extract-structured = "text_extraction.structured:main"
extract-embeddings = "text_extraction.embeddings:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
